comment non active live project

--- a/src/template.html
+++ b/src/template.html
@@ -142,7 +142,7 @@
             </div>
           </div>
           <!-- Each .row is a project -->
-          <div class="row">
+<!--           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
                 <h3 class="project-wrapper__text-title">OURQURAN</h3>
@@ -179,11 +179,11 @@
                 </a>
               </div>
             </div>
-          </div>
+          </div> -->
           <!-- /END Project -->
 
           <!-- Each .row is a project -->
-          <div class="row">
+<!--           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
                 <h3 class="project-wrapper__text-title">CRWN Clothing</h3>
@@ -218,11 +218,11 @@
                 </a>
               </div>
             </div>
-          </div>
+          </div> -->
           <!-- /END Project -->
 
           <!-- Each .row is a project -->
-          <div class="row">
+<!--           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
                 <h3 class="project-wrapper__text-title">SMART-BRAIN</h3>
@@ -266,12 +266,12 @@
                 </a>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <!-- /END Project -->
 
           <!-- Each .row is a project -->
-          <div class="row">
+<!--           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
                 <h3 class="project-wrapper__text-title">Robo Friends</h3>
@@ -309,7 +309,7 @@
                 </a>
               </div>
             </div>
-          </div>
+          </div> -->
           <!-- /END Project -->
 
           <!-- /END Project -->
